media/lib/src/bindings/ffi.g.dart

// This file is automatically generated by ffigen.dart; DO NOT MANUALLY EDIT!

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

@ffi.Native<ffi.Pointer<CVideoInfo> Function(ffi.Pointer<ffi.Char>)>()
external ffi.Pointer<CVideoInfo> media_get_video_info(
  ffi.Pointer<ffi.Char> path,
);

@ffi.Native<
    ffi.Pointer<CBuffer> Function(
        ffi.Pointer<ffi.Char>, ffi.Uint64, ffi.Uint32, ffi.Uint32)>()
external ffi.Pointer<CBuffer> media_generate_thumbnail(
  ffi.Pointer<ffi.Char> path,
  int time_ms,
  int max_width,
  int max_height,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CVideoInfo>)>()
external void media_free_video_info(
  ffi.Pointer<CVideoInfo> ptr,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<CBuffer>)>()
external void media_free_buffer(
  ffi.Pointer<CBuffer> ptr,
);

final class CVideoInfo extends ffi.Struct {
  @ffi.Uint64()
  external int duration_ms;

  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  @ffi.Uint64()
  external int size_bytes;

  @ffi.Bool()
  external bool has_bitrate;

  @ffi.Uint64()
  external int bitrate;

  external ffi.Pointer<ffi.Char> codec_name;

  external ffi.Pointer<ffi.Char> format_name;
}

final class CBuffer extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> data;

  @ffi.Uint64()
  external int len;
}
